# K504Metods

./: CMakeLists.txt  README.md
Python/: ImQuaolity.py  K504Metods.i  K504Metods.py  image_processing.py  load_lib.py  python_builder.cpp  setup.py  source.py
Python/src/: DCT.cpp  DCT.h  ImageQuaolity.cpp  ImageQuaolity.h  RAWImage.cpp  RAWImage.h
src/: DCT_Creator_Matrices.cpp  DCT_Creator_Matrices.h  DCT_Matrices.h  ERROR_Printer.h  RAWImage.cpp  RAWImage.h  main.cpp
src/CPU/: BM3D.cpp  BM3D.h  DCT.cpp  DCT.h  DCT_FILT.cpp  DCT_FILT.h  DCT_mex.cpp  Image.cpp  Image.h  ImageQuaolity.cpp  ImageQuaolity.h  Matrix.cpp  Matrix.h  PrepareImage.cpp  PrepareImage.h  SETUP_FILE.h  main.cpp
src/GPU/: GPU_DCT.cpp  GPU_DCT_stub.cpp  GPU_Functions.h  cuda_heder.h  matrixMultiply.cpp  testDCT.cpp
